[gd_scene load_steps=5 format=3 uid="uid://bnqwys562t51w"]

[ext_resource type="Script" uid="uid://cth3dtcdc3arw" path="res://scripts/views/core/Workspace.gd" id="1_0jkal"]
[ext_resource type="StyleBox" uid="uid://y8miqubgdclm" path="res://styles/titlebar.tres" id="2_42gql"]
[ext_resource type="Script" uid="uid://bya1yfib1nhs4" path="res://scripts/classes/simulation/simulation.gd" id="3_nnmvl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pt1fe"]
bg_color = Color(0.098, 0.09, 0.15, 1)
border_width_left = 3
border_width_right = 3
border_color = Color(0, 0, 0, 1)

[node name="ViewRoot" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0
script = ExtResource("1_0jkal")

[node name="TopBar" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_42gql")

[node name="Title" type="Label" parent="TopBar"]
layout_mode = 2
text = "Logic Workbench"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="TopBar"]
layout_mode = 2
alignment = 2

[node name="HomeButton" type="Button" parent="TopBar/Buttons"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Close"
flat = true

[node name="Content" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_pt1fe")

[node name="TabContainer" type="TabContainer" parent="Content"]
layout_mode = 2
current_tab = 2

[node name="Workspace" type="HBoxContainer" parent="Content/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 0
metadata/_tab_index = 0

[node name="GatePanel" type="PanelContainer" parent="Content/TabContainer/Workspace"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Content/TabContainer/Workspace/GatePanel"]
layout_mode = 2

[node name="Gates_LAB" type="Label" parent="Content/TabContainer/Workspace/GatePanel/VBoxContainer"]
layout_mode = 2
text = "Gates"
horizontal_alignment = 1

[node name="Gates_SEP" type="HSeparator" parent="Content/TabContainer/Workspace/GatePanel/VBoxContainer"]
layout_mode = 2

[node name="AND" type="Button" parent="Content/TabContainer/Workspace/GatePanel/VBoxContainer"]
layout_mode = 2
text = "AND"

[node name="NAND" type="Button" parent="Content/TabContainer/Workspace/GatePanel/VBoxContainer"]
layout_mode = 2
text = "NAND"

[node name="OR" type="Button" parent="Content/TabContainer/Workspace/GatePanel/VBoxContainer"]
layout_mode = 2
text = "OR"

[node name="NOR" type="Button" parent="Content/TabContainer/Workspace/GatePanel/VBoxContainer"]
layout_mode = 2
text = "NOR"

[node name="NOT" type="Button" parent="Content/TabContainer/Workspace/GatePanel/VBoxContainer"]
layout_mode = 2
text = "NOT"

[node name="XOR" type="Button" parent="Content/TabContainer/Workspace/GatePanel/VBoxContainer"]
layout_mode = 2
text = "XOR"

[node name="XNOR" type="Button" parent="Content/TabContainer/Workspace/GatePanel/VBoxContainer"]
layout_mode = 2
text = "XNOR"

[node name="STATE" type="Button" parent="Content/TabContainer/Workspace/GatePanel/VBoxContainer"]
layout_mode = 2
text = "TRI STATE"

[node name="STATES_LAB" type="Label" parent="Content/TabContainer/Workspace/GatePanel/VBoxContainer"]
layout_mode = 2
text = "States [DEBUG]"
horizontal_alignment = 1

[node name="STATES_SEB" type="HSeparator" parent="Content/TabContainer/Workspace/GatePanel/VBoxContainer"]
layout_mode = 2

[node name="ON" type="Button" parent="Content/TabContainer/Workspace/GatePanel/VBoxContainer"]
layout_mode = 2
text = "ON"

[node name="OFF" type="Button" parent="Content/TabContainer/Workspace/GatePanel/VBoxContainer"]
layout_mode = 2
text = "OFF"

[node name="TRI" type="Button" parent="Content/TabContainer/Workspace/GatePanel/VBoxContainer"]
layout_mode = 2
text = "TRI"

[node name="ERROR" type="Button" parent="Content/TabContainer/Workspace/GatePanel/VBoxContainer"]
layout_mode = 2
text = "ERROR"

[node name="INPUT_LAB" type="Label" parent="Content/TabContainer/Workspace/GatePanel/VBoxContainer"]
layout_mode = 2
text = "Input"
horizontal_alignment = 1

[node name="INPUT_SEB" type="HSeparator" parent="Content/TabContainer/Workspace/GatePanel/VBoxContainer"]
layout_mode = 2

[node name="SELECTOR" type="Button" parent="Content/TabContainer/Workspace/GatePanel/VBoxContainer"]
layout_mode = 2
text = "SELECTOR"

[node name="Workspace" type="GraphEdit" parent="Content/TabContainer/Workspace"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
snapping_distance = 10
right_disconnects = true
zoom_min = 0.5
zoom_max = 2.0
zoom_step = 1.5
show_menu = false
show_zoom_buttons = false
show_grid_buttons = false
show_arrange_button = false

[node name="Simulation" type="Node" parent="Content/TabContainer/Workspace/Workspace"]
unique_name_in_owner = true
script = ExtResource("3_nnmvl")
allow_simulate = true

[node name="Assembler" type="HBoxContainer" parent="Content/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Filesystem" type="HBoxContainer" parent="Content/TabContainer"]
layout_mode = 2
metadata/_tab_index = 2

[node name="BottomBar" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_42gql")

[node name="Version" type="Label" parent="BottomBar"]
layout_mode = 2
size_flags_horizontal = 0
text = "Version 3.0.0.0"
vertical_alignment = 1

[node name="Credits" type="Label" parent="BottomBar"]
layout_mode = 2
size_flags_horizontal = 8
text = "Damaged Engineer Interactive @ 2025"
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="mouse_entered" from="TopBar" to="." method="_top_bar_mouse_entered"]
[connection signal="mouse_exited" from="TopBar" to="." method="_top_bar_mouse_exited"]
[connection signal="pressed" from="TopBar/Buttons/HomeButton" to="." method="_home_button_pressed"]
[connection signal="button_down" from="Content/TabContainer/Workspace/GatePanel/VBoxContainer/AND" to="." method="_gate_button_down" binds= [1]]
[connection signal="button_down" from="Content/TabContainer/Workspace/GatePanel/VBoxContainer/NAND" to="." method="_gate_button_down" binds= [2]]
[connection signal="button_down" from="Content/TabContainer/Workspace/GatePanel/VBoxContainer/OR" to="." method="_gate_button_down" binds= [3]]
[connection signal="button_down" from="Content/TabContainer/Workspace/GatePanel/VBoxContainer/NOR" to="." method="_gate_button_down" binds= [4]]
[connection signal="button_down" from="Content/TabContainer/Workspace/GatePanel/VBoxContainer/NOT" to="." method="_gate_button_down" binds= [5]]
[connection signal="button_down" from="Content/TabContainer/Workspace/GatePanel/VBoxContainer/XOR" to="." method="_gate_button_down" binds= [6]]
[connection signal="button_down" from="Content/TabContainer/Workspace/GatePanel/VBoxContainer/XNOR" to="." method="_gate_button_down" binds= [7]]
[connection signal="button_down" from="Content/TabContainer/Workspace/GatePanel/VBoxContainer/STATE" to="." method="_gate_button_down" binds= [8]]
[connection signal="button_down" from="Content/TabContainer/Workspace/GatePanel/VBoxContainer/ON" to="." method="_gate_button_down" binds= [9]]
[connection signal="button_down" from="Content/TabContainer/Workspace/GatePanel/VBoxContainer/OFF" to="." method="_gate_button_down" binds= [10]]
[connection signal="button_down" from="Content/TabContainer/Workspace/GatePanel/VBoxContainer/TRI" to="." method="_gate_button_down" binds= [11]]
[connection signal="button_down" from="Content/TabContainer/Workspace/GatePanel/VBoxContainer/ERROR" to="." method="_gate_button_down" binds= [12]]
[connection signal="button_down" from="Content/TabContainer/Workspace/GatePanel/VBoxContainer/SELECTOR" to="." method="_gate_button_down" binds= [13]]
[connection signal="connection_request" from="Content/TabContainer/Workspace/Workspace" to="." method="_workspace_connection_request"]
[connection signal="delete_nodes_request" from="Content/TabContainer/Workspace/Workspace" to="." method="_workspace_delete_nodes_request"]
[connection signal="disconnection_request" from="Content/TabContainer/Workspace/Workspace" to="." method="_workspace_disconnection_request"]
